--- a/EDA_Submission_Template.ipynb
+++ b/EDA_Submission_Template.ipynb
@@ -5,93 +5,6 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "collapsed_sections": [
-        "vncDsAP0Gaoa",
-        "FJNUwmbgGyua",
-        "w6K7xa23Elo4",
-        "yQaldy8SH6Dl",
-        "PH-0ReGfmX4f",
-        "mDgbUHAGgjLW",
-        "O_i_v8NEhb9l",
-        "HhfV-JJviCcP",
-        "Y3lxredqlCYt",
-        "3RnN4peoiCZX",
-        "x71ZqKXriCWQ",
-        "7hBIi_osiCS2",
-        "JlHwYmJAmNHm",
-        "35m5QtbWiB9F",
-        "PoPl-ycgm1ru",
-        "H0kj-8xxnORC",
-        "nA9Y7ga8ng1Z",
-        "PBTbrJXOngz2",
-        "u3PMJOP6ngxN",
-        "dauF4eBmngu3",
-        "bKJF3rekwFvQ",
-        "MSa1f5Uengrz",
-        "GF8Ens_Soomf",
-        "0wOQAZs5pc--",
-        "K5QZ13OEpz2H",
-        "lQ7QKXXCp7Bj",
-        "448CDAPjqfQr",
-        "KSlN3yHqYklG",
-        "t6dVpIINYklI",
-        "ijmpgYnKYklI",
-        "-JiQyfWJYklI",
-        "EM7whBJCYoAo",
-        "fge-S5ZAYoAp",
-        "85gYPyotYoAp",
-        "RoGjAbkUYoAp",
-        "4Of9eVA-YrdM",
-        "iky9q4vBYrdO",
-        "F6T5p64dYrdO",
-        "y-Ehk30pYrdP",
-        "bamQiAODYuh1",
-        "QHF8YVU7Yuh3",
-        "GwzvFGzlYuh3",
-        "qYpmQ266Yuh3",
-        "OH-pJp9IphqM",
-        "bbFf2-_FphqN",
-        "_ouA3fa0phqN",
-        "Seke61FWphqN",
-        "PIIx-8_IphqN",
-        "t27r6nlMphqO",
-        "r2jJGEOYphqO",
-        "b0JNsNcRphqO",
-        "BZR9WyysphqO",
-        "jj7wYXLtphqO",
-        "eZrbJ2SmphqO",
-        "rFu4xreNphqO",
-        "YJ55k-q6phqO",
-        "gCFgpxoyphqP",
-        "OVtJsKN_phqQ",
-        "lssrdh5qphqQ",
-        "U2RJ9gkRphqQ",
-        "1M8mcRywphqQ",
-        "tgIPom80phqQ",
-        "JMzcOPDDphqR",
-        "x-EpHcCOp1ci",
-        "X_VqEhTip1ck",
-        "8zGJKyg5p1ck",
-        "PVzmfK_Ep1ck",
-        "n3dbpmDWp1ck",
-        "ylSl6qgtp1ck",
-        "ZWILFDl5p1ck",
-        "M7G43BXep1ck",
-        "Ag9LCva-p1cl",
-        "E6MkPsBcp1cl",
-        "2cELzS2fp1cl",
-        "3MPXvC8up1cl",
-        "NC_X3p0fY2L0",
-        "UV0SzAkaZNRQ",
-        "YPEH6qLeZNRQ",
-        "q29F0dvdveiT",
-        "EXh0U9oCveiU",
-        "22aHeOlLveiV",
-        "JcMwzZxoAimU",
-        "8G2x9gOozGDZ",
-        "gCX9965dhzqZ",
-        "gIfDvo9L0UH2"
-      ],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -149,7 +62,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Write the summary here within 500-600 words."
+        "The study of hotel booking data is important for any hospitality business because it provides insights into customer booking behavior and the channels through which bookings are made. This project involves analyzing a dataset of hotel bookings for city and resort hotels. The project activities are categorized as follows:\n",
+        "\n",
+        "\n",
+        "\n",
+        "1.   Defining the problem statement: The objective of the study is determined.\n",
+        "2.   Collecting and preparing data: The data is cleaned, outliers are treated,And any necessary data preparation is performed.\n",
+        "3.   Performing exploratory data analysis: A deep study of the relationship between different features is conducted, and new variables are generated as needed to align with the related business objectives. The data is presented in an easily understandable form.\n",
+        "4.   Providing observations and recommendations: Based on the EDA, observations are made and recommendations are given to the business.\n",
+        "\n",
+        "Overall, the project aims to provide valuable insights into hotel booking behavior that can be used to improve the hospitality business's operations and increase revenue.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "F6v_1wHtG2nS"
@@ -167,7 +93,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Provide your GitHub Link here."
+        "https://github.com/sanwre001/EDA-project-"
       ],
       "metadata": {
         "id": "h1o69JH3Eqqn"
@@ -185,7 +111,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Write Problem Statement Here.**"
+        "This project aims to study different aspects of hotel booking behavior to help solve various business challenges faced by the hotel. The study includes: \n",
+        "1. Understanding where guests come from to increase footfall from those countries and retain them through personalized contact even after they leave.\n",
+        "2. Analyzing monthly booking patterns to identify the busiest quarter/trimester of the year and adjust manpower, promotions, and prices to maximize occupancy during lean periods. \n",
+        "3. Studying the duration of guests' stays to provide a smart pricing structure that encourages longer stays. \n",
+        "4. Analyzing meal patterns to optimize kitchen inventory and cafeteria staffing. \n",
+        "5. Examining booking patterns by market segment to reward customers who provide more business. \n",
+        "6. Analyzing the average daily rate's dependence on the season, room type, and allotment of demanded room types to optimize pricing for higher occupancy. \n",
+        "7. Studying booking cancellation patterns based on various parameters like hotel type, lead time, season, deposit, etc., to plan for overbooking and devise penalty amounts. \n",
+        "8. Analyzing customer retention patterns based on hotel type to improve the experience and retain customers. \n",
+        "\n",
+        "Overall, this analysis aims to help the hotel improve operations, increase revenue, and provide better customer experiences."
       ],
       "metadata": {
         "id": "DpeJGUA3kjGy"
@@ -203,7 +139,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "Maximise Bookings, Minimise Cancellations , Maximise Customer retention as well as stay longevity."
       ],
       "metadata": {
         "id": "PhDvGCAqmjP1"
@@ -1025,6 +961,83 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# Checking total bookings for each year\n",
+        "copy_df['arrival_date_year'].value_counts().sort_index()"
+      ],
+      "metadata": {
+        "id": "SCkrGuPJTOHS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Checking total bookings for each year for both hotel types\n",
+        "copy_df[['arrival_date_year','hotel']].value_counts().unstack()"
+      ],
+      "metadata": {
+        "id": "czuGhe2_UhGn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Function to show percentage in countplot\n",
+        "def barPerc(copy_df,xVar,ax):\n",
+        "\n",
+        "    # 1. how many X categories\n",
+        "    ##   check for NaN and remove\n",
+        "    numX=len([x for x in df[xVar].unique() if x==x])\n",
+        "\n",
+        "    # 2. The bars are created in hue order, organize them\n",
+        "    bars = ax.patches\n",
+        "    ## 2a. For each X variable\n",
+        "    for ind in range(numX):\n",
+        "        ## 2b. Get every hue bar\n",
+        "        ##     ex. 8 X categories, 4 hues =>\n",
+        "        ##    [0, 8, 16, 24] are hue bars for 1st X category\n",
+        "        hueBars=bars[ind:][::numX]\n",
+        "        ## 2c. Get the total height (for percentages)\n",
+        "        total = sum([x.get_height() for x in hueBars])\n",
+        "\n",
+        "        # 3. Print the percentage on the bars\n",
+        "        for bar in hueBars:\n",
+        "            ax.text(bar.get_x() + bar.get_width()/2.,\n",
+        "                    bar.get_height(),\n",
+        "                    f'{bar.get_height()/total:.0%}',\n",
+        "                    ha=\"center\",va=\"bottom\")"
+      ],
+      "metadata": {
+        "id": "Tfh-OOU3TYDR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Plotting count plot to show distribution of booking among Resort Hotels and City Hotels for all three years\n",
+        "plt.figure(figsize=(10,5))\n",
+        "ax=sns.countplot (x= 'arrival_date_year', data= copy_df, hue= 'hotel')\n",
+        "plt.xticks(size=15)\n",
+        "plt.xlabel('Year Of Booking',size=15)\n",
+        "plt.yticks(size=15)\n",
+        "plt.ylabel('count',size=15)\n",
+        "plt.title(\"Hotel Booking Distribution\")\n",
+        "barPerc(copy_df,\"arrival_date_year\",ax)"
+      ],
+      "metadata": {
+        "id": "5dgWfGTmUn0v"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "##### 1. Why did you pick the specific chart?"
@@ -1036,7 +1049,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "this is a countplot form seaborn library which is a type of histogram used to visualize the counts of observations in each categorical bin using bars.Using count plot we can easily visualize and compare distribution of bookings."
       ],
       "metadata": {
         "id": "5dBItgRVYoAp"
@@ -1054,7 +1067,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "From the graph we can conclude that in 2016 and 2017 city hotels received about 1.5 times more bookings than resort hotels while in 2015 bookings were quite low compared to 2016 and 2017 and also both city and resort hotels received equal no of bookings."
       ],
       "metadata": {
         "id": "4jstXR6OYoAp"
@@ -1073,7 +1086,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "Yes, it will make a positive business impect through this they can analyse that witch year they make more profit and then the can look for the reasons why the make more profit that year. "
       ],
       "metadata": {
         "id": "zfJ8IqMcYoAp"
@@ -1091,10 +1104,35 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 4 visualization code"
+        "# Chart - 4 visualization code\n",
+        "activities = ['August','July','May','October','April','June','September','March','February',\"November\",'December','January']\n",
+        "plt.figure(figsize=(14,7))\n",
+        "plt.pie(copy_df.arrival_date_month.value_counts(),\n",
+        "labels =activities,\n",
+        "startangle = 90,\n",
+        "shadow = True,\n",
+        "explode =(0.1,0.1,0.1,0,0,0,0,0,0,0,0,0),\n",
+        "autopct ='%1.1f%%')\n",
+        "plt.title('Monthly Guest arrival pattern')\n",
+        "\n",
+        "# Print the chart\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "irlUoxc8YrdO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Bar plot\n",
+        "sns.countplot(x='arrival_date_month', hue='hotel', data=copy_df);\n",
+        "plt.title('Monthly Guest arrival pattern');"
+      ],
+      "metadata": {
+        "id": "4FVkxM-rWL8R"
       },
       "execution_count": null,
       "outputs": []
@@ -1111,7 +1149,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "Here in First graph i draw the Pie chart and in second chart the Count plot is drawn to show the explicit view of Monthly guest arrival."
       ],
       "metadata": {
         "id": "aJRCwT6DYrdO"
@@ -1129,7 +1167,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "from pie and count plot chart i found that what is the count of gust arrive in month wise and hotel wise. "
       ],
       "metadata": {
         "id": "Xx8WAJvtYrdO"
@@ -1148,7 +1186,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "As i mentioned there is two graph pie chart and count plot for monthly gust arrival wich show for which month most of the gust come and stay in witch tyoe of hotel City hotel or resort hotel. "
       ],
       "metadata": {
         "id": "jLNxxz7MYrdP"
@@ -1166,10 +1204,31 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 5 visualization code"
+        "# Chart - 5 visualization code\n",
+        "# Checking monthly customer bookings and cancelations\n",
+        "copy_df[['arrival_date_month','is_canceled']].value_counts().unstack()"
       ],
       "metadata": {
         "id": "TIJwrbroYuh3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Visualizing how many bookings got canceled for each month\n",
+        "plt.figure(figsize=(20,5))\n",
+        "ax=sns.countplot (x= 'arrival_date_month', data= copy_df, hue= 'is_canceled')\n",
+        "plt.xticks(size=15)\n",
+        "plt.xlabel('Month Of Booking',size=15)\n",
+        "plt.yticks(size=15)\n",
+        "plt.ylabel('count',size=15)\n",
+        "plt.title(\"Monthly Booking cancelations\")\n",
+        "barPerc(copy_df,'arrival_date_month',ax)"
+      ],
+      "metadata": {
+        "id": "k42grs3xYGkg"
       },
       "execution_count": null,
       "outputs": []
