--- a/EDA_Submission_Template.ipynb
+++ b/EDA_Submission_Template.ipynb
@@ -2072,7 +2072,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "We have used heatmap here, because it is considered one of the best chart to visualize correlation between different variables in a dataframe."
+        "I have used heatmap here, because it is considered one of the best chart to visualize correlation between different variables in a dataframe."
       ],
       "metadata": {
         "id": "DVPuT8LYZNRQ"
@@ -2108,10 +2108,13 @@
     {
       "cell_type": "code",
       "source": [
-        "# Pair Plot visualization code"
+        "# Pair Plot visualization code\n",
+        "cols = ['hotel', 'is_canceled', 'lead_time', 'adults', 'children', 'babies']\n",
+        "sns.pairplot(copy_df[cols], hue='hotel')\n",
+        "plt.show()"
       ],
       "metadata": {
-        "id": "o58-TEIhveiU"
+        "id": "UZJSaHMzF3RF"
       },
       "execution_count": null,
       "outputs": []
@@ -2128,7 +2131,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "I have used Pair plot here, because it is also considered one of the best chart to visualize the tings."
       ],
       "metadata": {
         "id": "eMmPjTByveiU"
@@ -2146,7 +2149,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "As per the chart the canceled persentage is high for city hotels as compair to resort hotels and most of the adults prefered city hotels."
       ],
       "metadata": {
         "id": "uPQ8RGwHveiV"
