--- a/EDA_Submission_Template.ipynb
+++ b/EDA_Submission_Template.ipynb
@@ -2177,7 +2177,23 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "My business objective was to increase bookings, decrease cancellations, and increase customer retention while also extending stays. Based on My investigation, some recommendations we came up with are as follows:\n",
+        "\n",
+        "*   Additional public marketing can help raise the number of visitors from * certain nations. Even after they depart, more effort can be taken to keep them by keeping in touch with them by personalised emails, phone calls, etc.\n",
+        "\n",
+        "*   Agents and market sectors that bring in more clients should also be recognised with awards and incentives.\n",
+        "\n",
+        "*   Cancellations had a strong connection with new clients. If new clients are prone to cancel, further efforts should be taken to retain them by providing discounts and offers. Additionally, greater efforts should be made to retain clients as Repeated clients generally cancel less bookings. \n",
+        "\n",
+        "*   Data from each visitor's stay can be used to send them personalized offers to maximize their chances of booking again.\n",
+        "\n",
+        "*   Launching customer loyalty programmes to reward loyal customers.\n",
+        "\n",
+        "*   The period of each visitor's stay can be utilized to create a clever pricing model that should prolong one‘s stay.\n",
+        "\n",
+        "*   Extra efforts should be made to foster positive relationships with clients which can be done by sending them engaging emails, such as \"Thank you\" and \"Happy Holidays\",etc.\n",
+        "\n",
+        "*   Good customer evaluations can have a significant impact on a hotel's brand value, and it is important to consider customer feedback and reviews in order to improve hotel amenities and the guest experience."
       ],
       "metadata": {
         "id": "pASKb0qOza21"
@@ -2195,7 +2211,51 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Write the conclusion here."
+        "1) Most of the guests are local i.e. from Portugal. Among overseas visitors, European neighbours like United Kingdom, France, Spain, Germany, Italy had maximum footfall. Least number of visitors came from Countries like Zambia, Madagascar, Seychelles, Faroe Islands etc. Hence there is scope to increase footfall from these countries from where number of customers were less.\n",
+        "\n",
+        "2) Barring 2015, almost 2/3rd of the bookings were for City Hotels for each year. This may be due to frequent business travellers as well as easy accessibility.\n",
+        "\n",
+        "3) Monthly visit pattern shows a \"wave like\" pattern where months of July & August were heavily visited and November, December, January were least visited. Other months were moderately visited.\n",
+        "\n",
+        "4) For all the months, at least 21% of bookings were cancelled. Percentage of cancellation was least in least visited months of Nov , December, January and was most in heavily visited months. Hence there is scope of overbooking for all Heavily visited as well as moderately visited months.\n",
+        "\n",
+        "5) Duration of stay reduces drastically after week's stay for City hotels and reduces drastically after fortnight for resort hotels.Resort hotels seem to be visited for stays either on weekend or weekly or fortnightly basis. People use city hotels mostly for short stays(1-4 days). Special customised Packages can be suggested to increase the stay duration.\n",
+        "\n",
+        "6) Breakfast is most preferred meal type followed by Breakfast+Dinner and Self catering. Therefore customer experience has to be taken special care during timings of these meals as well as availability of utensils, gas in kitchen or kitchenette where guests can prepare their own food.\n",
+        "\n",
+        "7) Almost 80% of the bookings are done through Travel agents and Tour operators.There is immense scope to increase the books through GDS(Global Distribution System ) as it is grossly underutilized with just 0.21% bookings.\n",
+        " \n",
+        "8) Lion's share of agent bookings is done by 2 agents (Agent 9 & 240 ). Also, 75% of the bookings are done by just 8 agents. Therefore there is immense scope to increase bookings by other agents. Also special care needs to be taken to provide best services to these two agents providing most business.\n",
+        "\n",
+        "9) Most of the bookings are done without deposit by all market segments. However some group bookings and Offline TA/TO Bookings are done through Non refundable deposits too. Refundable deposits are miniscule and hence can be ignored.\n",
+        "\n",
+        "10) City hotels have higher adr and hence make more revenue per room w.r.t Resort hotels.\n",
+        "\n",
+        "11) Price per night is dependent on season.Heavily booked months have highest adr.\n",
+        "\n",
+        "12) Not allotment of demanded room lowers the adr i.e. price for room for customers except for few customers who have paid more adr even when they were not allotted the same room. These customers do not seem to cancel their visit plans in spite of different room allotment.\n",
+        "\n",
+        "13) Cancellation rate of City hotel is around 30%. Cancellation rate of Resort Hotels is around 20% lesser than that of city hotels.\n",
+        "\n",
+        "14) Cancellation shows similar pattern w.r.t. waiting list period as well as lead time. Most of the bookings which were cancelled as well as those not cancelled show similar waiting time as well as lead time values.\n",
+        "\n",
+        "15) Cancellations are more for higher average lead times (80 days). For lower average lead times (70 or less) there are no cancellations as people seem to have firm visit plans.\n",
+        "\n",
+        "16) Repeated guest tend to cancel less as compared to those visiting for first time. This might be true because of their prior satisfactory experience with the hotel. Effort should be made to retain customers to reduce chance of cancellations too.\n",
+        "\n",
+        "17) Most cancellations are done by Online TA followed by Offline TA/TO, Direct groups and corporate. Complementary segment has no cancellations.\n",
+        "\n",
+        "18) Guests who did not pay any deposit cancelled most of the bookings. An incentive of reduced adr can be given to customers who give deposit and furthermore reduced adr to those who give non refundable deposits.\n",
+        "\n",
+        "19) Resort hotels have slightly more repeat customers as compared to City hotels. Therefore there is ample scope for city hotels to improve their services to increase repeated footfall.\n",
+        "\n",
+        "20) Early bookings are done mostly by TA/TO followed by Direct, GDS and corporate. This might be because of visits by corporate at relatively shorter notice.\n",
+        "\n",
+        "21) Among distribution channels, average waiting time for TA/TO is highest followed by Direct and corporate. Waiting time for GDS is negligible. This might be because of no. of bookings itself for GDS are very less, hence waiting time is less too.\n",
+        "\n",
+        "22) Adr for city hotels have been increasing every year. For resort hotel price dipped in 2016 but bounced back and increased appreciably in the succeeding year.\n",
+        "\n",
+        "23) City hotel has higher cancellation rate as itineraries of the customers visiting seem to change frequently leading to more cancellations.\n"
       ],
       "metadata": {
         "id": "Fjb1IsQkh3yE"
